--- a/ldecod_vc141.vcxproj
+++ b/ldecod_vc141.vcxproj
@@ -351,7 +351,12 @@
     <ClCompile Include="lcommon\src\parsetcommon.c" />
     <ClCompile Include="lcommon\src\transform.c" />
     <ClCompile Include="lcommon\src\win32.c" />
-    <ClCompile Include="ldecod\src\annexb.c" />
+    <ClCompile Include="ldecod\src\annexb.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="ldecod\src\biaridecod.c" />
     <ClCompile Include="ldecod\src\block.c" />
     <ClCompile Include="ldecod\src\cabac.c" />
